<resources>
    <string name="app_name">Musicana</string>

    //onpoarding activity
    <string name="Skip">Skip</string>
    <string name="next">Next</string>

    //onboard fragment
    <string name="text_1">Listen freely</string>
    <string name="text_2">Musicana provides the latest world tunes and music</string>

    //onboard fragment tow
    <string name="text_1_tow">Enjoy without internet</string>
    <string name="text_2_tow">Save and play music in internet off mode</string>

    //onboard fragment three
    <string name="text_1_three">Follow Up Close</string>
    <string name="text_2_three">Follow the artists closest to your \n area</string>

    //onboard fragment four
    <string name="text_1_four">Big updates</string>
    <string name="text_2_four">There are great features available within the app that you have not \n seen before.</string>
    <string name="text_34567_four">By clicking on Get started button you accept Our terms and conditions and privacy policy of Musicana</string>
    <string name="start">get Started</string>

    //terms and condations
    <string name="terms_condations">Terms and conditions</string>
    <string name="text_terms_condations">text_terms_condations</string>


    //privacy policy
    <string name="privacy_policy">privacy policy</string>
    <string name="text_privacy_policy">text_privacy_policy</string>

    //login Activity
    <string name="welcome">Welcome back!</string>
    <string name="login_your_account">Please login to your account.</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="regester">REGISTER NOW</string>
    <string name="forgot">Forgot?</string>

    //regester Activity
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_now">Login now?</string>

    //forgot Password
    <string name="send">Send</string>
    <string name="forgot_password_title">Forgot Password</string>

    //home fragment
    <string name="home">Home</string>

    //profile fragment
    <string name="profile">Profile</string>

    //archives
    <string name="archives">Archives</string>

    //favorite
    <string name="favorite">Favorite</string>
    <string name="toolbarTitle_home">Musicana</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="online">Online</string>
    <string name="playlist">PlayList</string>
    <string name="musec_name">Dirty Computers</string>
    <string name="type_musec">Joe Perez</string>
    <string name="channels">Channels</string>
    <string name="number_music">01</string>
    <string name="music">Music</string>
    <string name="more">More</string>

    //map
    <string name="map_id">3974c19c9f72b475</string>
    <string name="map_custom_info_title">Dirty Computers</string>
    <string name="map_custom_info_name">Joe Perez</string>
    <string name="map_custom_info_location">Location</string>
    <string name="settings">Setting</string>
    <string name="profile_user_name">Sammeer Kream</string>
    <string name="profile_Entry_Permit">Entry Permit</string>
    <string name="profile_Mood">Mood</string>
    <string name="profile_Language">"Language "</string>
    <string name="profile_Addition_Screen">Addition Screen</string>
    <string name="profile_Privacy_Policy">Privacy Policy</string>
    <string name="profile_Terms_Conditions">Terms And Conditions</string>
    <string name="profile_Version">Version</string>
    <string name="profile_Current_Version">Current Version</string>
    <string name="profile_Version_number">1.00</string>
    <string name="profile_Automatic_Updates">Automatic Updates</string>
    <string name="profile_Logoff">Logoff</string>
    <string name="label1">label1</string>
    <string name="label2">label2</string>
    <string name="label3">label3</string>
    <string name="save">Save</string>
    <string name="profile_sheet_title">profile sheet title</string>
    <string name="EntryPermit">Entry Permit</string>
    <string name="RunningBackground">Running In Background</string>
    <string name="EntryPermitAudioFiles">Entry Permit Audio Files</string>
    <string name="Location">"Location "</string>
    <string name="Mood">Mood</string>
    <string name="DarkMode">Dark Mode</string>
    <string name="MoonMode">Moon Mode</string>
    <string name="LightMode">Light Mode</string>
    <string name="Arabic">Arabic</string>
    <string name="English">English</string>
    <string name="Language">Language</string>
    <string name="mode">mode</string>
    <string name="music_name">Music Name</string>
    <string name="music_alpom">Ausic Alpom</string>
    <string name="Powered">Powered Py Prography</string>
    <string name="country">country</string>
    <string name="gender">gender</string>
    <string name="Title">Title</string>
    <string name="genger">Gender</string>
    <string name="addList">Add to Play List</string>
    <string name="playLixstName">Play List Nmae</string>
    <string name="addToPlayList">Add To Play List</string>
    <string name="downlod">Downlod</string>
    <string name="share">Share</string>
    <string name="addTofavorite">Add To Favorite</string>
    <string name="new_play_list">New PLay List</string>
    <string name="play_list_name">Play List Name</string>
    <string name="OK">OK</string>
    <string name="resendcode">ResendCode!</string>
    <string name="lastname">Last Name</string>
    <string name="search">Search</string>
    <string name="type">Type</string>
    <string name="crop_image_text">Crop</string>
    <string name="permission_denied">permission denied</string>


    <!--    google admob-->
    <string name="ggl_eg">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ggl_banner1">ca-app-pub-1246280412638998/1963834072</string>
    <string name="ggl_banner2">ca-app-pub-1246280412638998/3616160239</string>

    <!--    fb ads-->
    <string name="fb_eg">IMG_16_9_APP_INSTALL#YOUR_PLACEMENT_ID</string>
    <string name="fb_banner1">IMG_16_9_APP_INSTALL#705981750064104_707890133206599</string>
    <string name="fb_banner2">IMG_16_9_APP_INSTALL#705981750064104_707887729873506</string>
    <string name="newplailistname">play list name</string>
    <string name="delete">Delete</string>

</resources>